force-app/main/default/objects/CBK_MaskField__mdt/CBK_MaskField__mdt.object-meta.xml
<CustomObject>
    <label>Mask Field</label>
    <pluralLabel>Mask Fields</pluralLabel>
</CustomObject>