force-app/main/default/objects/CBK_MaskField__mdt/fields/CBK_Activo__c.field-meta.xml
<CustomField>
    <fullName>CBK_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicador de si el enmascaramiento del campo se ha de ejecutar al ejecutarse el proceso batch sobre l objeto relacionado.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>