force-app/main/default/objects/CBK_MaskField__mdt/fields/CBK_FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>CBK_FieldAPIName__c</fullName>
    <description>Campo en el que se indica el nombre API específico del campo sobre e que se ha de aplicar la funcionalidad.</description>
    <label>Campo (API Name)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>