force-app/main/default/objects/CBK_MaskField__mdt/fields/CBK_Funcion__c.field-meta.xml
<CustomField>
    <fullName>CBK_Funcion__c</fullName>
    <description>Lista de posibles funciones que se pueden aplicar para el enmascaramiento del campo indicado.</description>
    <label>Función a aplicar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nombre</fullName>
                <default>true</default>
                <label>Nombre</label>
            </value>
            <value>
                <fullName>Apellido</fullName>
            </value>
            <value>
                <fullName>Nombre completo</fullName>
            </value>
            <value>
                <fullName>Fecha pasada</fullName>
            </value>
            <value>
                <fullName>Fecha futura</fullName>
            </value>
            <value>
                <fullName>Correo electrónico</fullName>
            </value>
            <value>
                <fullName>Nif</fullName>
            </value>
            <value>
                <fullName>Cif</fullName>
            </value>
            <value>
                <fullName>Ocultar texto</fullName>
            </value>
            <value>
                <fullName>Teléfono móvil</fullName>
            </value>
            <value>
                <fullName>Teléfono fijo</fullName>
            </value>
            <value>
                <fullName>Valor nulo</fullName>
            </value>
            <value>
                <fullName>Texto vacío</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>