force-app/main/default/objects/CBK_MaskField__mdt/fields/CBK_RecordType__c.field-meta.xml
<CustomField>
    <fullName>CBK_RecordType__c</fullName>
    <description>Campo en el que se indica el nombre API específico del campo sobre e que se ha de aplicar la funcionalidad.</description>
    <label>Tipo de registro (DeveloperName)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>